@@ -1,3 +1,9 @@
+2009-11-10  Oliver Hunt  <oliver@apple.com>
+
+        Chrome build fix.
+
+        * bindings/v8/V8Index.h:
+
 2009-11-10  Joanmarie Diggs  <joanmarie.diggs@gmail.com>
 
         Reviewed by Reviewed by Jan Alonzo.
